fix double scroll in modal window

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -9,7 +9,6 @@
   justify-content: center;
   align-items: center;
   background-color: var(--backdrop);
-  overflow-y: scroll;
 }
 
 .Modal {
